Update java version to 21