@@ -5,6 +5,7 @@ kafka_2.13-3.6.2/bin/kafka-server-start.sh -daemon kafka_2.13-3.6.2/config/kraft
 su - postgres -c "pg_ctl -D /var/lib/postgresql/data start"
 
 exec java \
+  --add-opens=java.base/sun.nio.ch=ALL-UNNAMED \
   -Dakka.cluster.seed-nodes.0=akka://fiubakka-server@127.0.0.1:25520 \
   -Dakka.remote.artery.canonical.port=25520 \
   -Dakka.remote.artery.bind.port=25520 \
